Basic FreeRTOS IO should be working Lets set a checkpoint

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,9 @@ framework = arduino
 lib_deps =
     harvie/ps2dev
 
+[platformio]
+default_envs = nucleo_f411re
+
 [avr]
 lib_deps =
     feilipu/FreeRTOS
@@ -38,6 +41,14 @@ lib_deps =
 [env:blackpill_f411ce]
 platform = ststm32
 board = blackpill_f411ce
+lib_deps = 
+    ${env.lib_deps}
+    ${arm.lib_deps}
+
+[env:nucleo_f411re]
+platform = ststm32
+board = nucleo_f411re
+upload_protocol = stlink
 lib_deps = 
     ${env.lib_deps}
     ${arm.lib_deps}
