Basic Serial Output working with FreeRTOS on STM32

--- a/platformio.ini
+++ b/platformio.ini
@@ -49,6 +49,8 @@ lib_deps =
 platform = ststm32
 board = nucleo_f411re
 upload_protocol = stlink
+monitor_port = COM9
+monitor_speed = 115200
 lib_deps = 
     ${env.lib_deps}
     ${arm.lib_deps}
