Ugly hacky debug session later, seemingly working

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 framework = arduino
 lib_deps =
     harvie/ps2dev
+    noah1510/LedController @ ^1.7.0
 
 [platformio]
 default_envs = nucleo_f411re
@@ -23,6 +24,7 @@ lib_deps =
 [arm]
 lib_deps = 
     stm32duino/STM32duino FreeRTOS
+    SPI
 
 [env:micro]
 platform = atmelavr
