Tested, seemingly working Hooked up an arduino running one of the keyboard sketches that prints the scancodes received, and well, that works. Still need to test against an actual ps/2 host

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,8 @@ lib_deps =
     noah1510/LedController @ ^1.7.0
 
 [platformio]
-default_envs = nucleo_f411re
+;default_envs = nucleo_f411re
+default_envs = blackpill_f411ce
 
 [avr]
 lib_deps =
@@ -33,6 +34,13 @@ lib_deps =
     ${env.lib_deps}
     ${avr.lib_deps}
 
+[env:bluepill]
+platform = ststm32
+board = bluepill
+lib_deps = 
+    ${env.lib_deps}
+    ${arm.lib_deps}
+    
 [env:blackpill_f401cc]
 platform = ststm32
 board = blackpill_f401cc
@@ -43,6 +51,9 @@ lib_deps =
 [env:blackpill_f411ce]
 platform = ststm32
 board = blackpill_f411ce
+upload_protocol = stlink
+monitor_port = COM12
+monitor_speed = 115200
 lib_deps = 
     ${env.lib_deps}
     ${arm.lib_deps}
@@ -51,6 +62,7 @@ lib_deps =
 platform = ststm32
 board = nucleo_f411re
 upload_protocol = stlink
+build_flags = -DUSE_DEBUG_LED
 monitor_port = COM9
 monitor_speed = 115200
 lib_deps = 
